<resources>
    <string name="app_name">FirebaseLogin</string>
    <string name="login">Login</string>
    <string name="btn_forgot_password">Forgot your password</string>
    <string name="btn_register">Register</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="fill_your_email">Fill your email</string>
    <string name="reset_password">Reset Password</string>
    <string name="kembali">kembali</string>
<<<<<<< HEAD
    <string name="btn_logout">Logout</string>
=======
>>>>>>> 219c78bdd8b1cef99a4df59ea6836fc83599ed95
</resources>
